--- a/main.ipynb
+++ b/main.ipynb
@@ -16,19 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
     "import data\n",
+    "from model import MLP\n",
     "import tensorflow as tf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,13 +54,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "currentPath = os.getcwd()\n",
-    "train = data.testImputed(currentPath=currentPath)\n",
-    "test_list = data.trainImputed(currentPath=currentPath)"
+    "test_list = data.testImputed(currentPath=currentPath)\n",
+    "train = data.trainImputed(currentPath=currentPath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<model.MLP instance at 0x76d24d0>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlp = MLP()\n",
+    "mlp."
    ]
   }
  ],
@@ -79,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.5"
   }
  },
  "nbformat": 4,
